Implementación de fetch / empezar a configurar
Se está empezando a crear la versión cliente del sistema.
Por el momento ya redirige si está seteado.

--- a/SubstanceSoft/package.json
+++ b/SubstanceSoft/package.json
@@ -1,5 +1,8 @@
 {
     "name": "SubstanceSoft",
     "main": "./main.js",
-    "version": "1.0.0"
+    "version": "1.0.0",
+    "dependencies": {
+        "node-fetch": "^2.4.1"
+    }
 }
