--- a/SubstanceSoft/package.json
+++ b/SubstanceSoft/package.json
@@ -3,6 +3,7 @@
     "main": "./main.js",
     "version": "1.0.0",
     "dependencies": {
-        "node-fetch": "^2.4.1"
+        "node-fetch": "^2.4.1",
+        "push.js": "^1.0.9"
     }
 }
