Módulo Arduino avance
Solo hay request y se creó el inicio del módulo con Arduino.
Falta la funcionalidad completa del sistema e implementación del login.

--- a/SubstanceSoft/package.json
+++ b/SubstanceSoft/package.json
@@ -3,7 +3,6 @@
     "main": "./main.js",
     "version": "1.0.0",
     "dependencies": {
-        "node-fetch": "^2.4.1",
-        "push.js": "^1.0.9"
+        "node-fetch": "^2.4.1"
     }
 }
