--- a/SubstanceSoft/package.json
+++ b/SubstanceSoft/package.json
@@ -4,5 +4,8 @@
     "version": "1.0.0",
     "dependencies": {
         "node-fetch": "^2.4.1"
+    },
+    "scripts":{
+        "start":"electron ."
     }
 }
